harness/clients/ratatui/tests/snapshots/stream__stream-complete.snap
---
source: harness/clients/ratatui/tests/stream.rs
expression: done
---
Here is the fix:

────────────
  fn main() {
      println!("hi");
  }
────────────
