harness/clients/ratatui/tests/snapshots/stream__stream-midstream.snap
---
source: harness/clients/ratatui/tests/stream.rs
expression: mid
---
Here is the fix:

```rust
fn main() {
